@@ -51,7 +51,7 @@ else
   portrule = function() return false end
   action = function() end
   stdnse.print_debug( 3, "Skipping %s script because OpenSSL is missing.",
-      filename)
+      SCRIPT_NAME)
   return;
 end
 
